--- a/apply.html
+++ b/apply.html
@@ -25,7 +25,7 @@
   <!-- Form -->
   <div id="contact">
     <div class="container">
-  <form>
+  <form name ="contact" method="POST" data-netlify="true">
     <h2>Điền cẩn thận nhé, con mèo đang nhìn đấy! </h2>
     <div class="form-group">
       <label for="name">Tên</label>
