--- a/apply.html
+++ b/apply.html
@@ -18,14 +18,14 @@
       <ul>
         <li><a href="index.html">Trang Chủ</a></li>
         <li><a href="apply.html" class="current">Apply</a></li>
-        <!-- <li><a href="map.html">Quà</a></li> -->
+        <li><a href="map.html">Quà</a></li>
       </ul>
     </div>
   </nav>
   <!-- Form -->
   <div id="contact">
     <div class="container">
-  <form name ="contact" method="POST" data-netlify="true">
+  <form name="contact" method="POST" data-netlify="true">
     <h2>Điền cẩn thận nhé, con mèo đang nhìn đấy! </h2>
     <div class="form-group">
       <label for="name">Tên</label>
