--- a/map.html
+++ b/map.html
@@ -18,11 +18,15 @@
       <ul>
         <li><a href="index.html">Trang chủ</a></li>
         <li><a href="apply.html">Apply</a></li>
-        <!-- <li><a href="map.html" class="current">Quà</a></li> -->
+        <li><a href="map.html" class="current">Quà</a></li>
       </ul>
     </div>
   </nav>
-
+  <div id="lua">
+    <div class="container">
+    <img src="./img/maxresdefault.jpg" alt="bi lua roi">
+    </div>
+  </div>
   <!-- Social -->
   <div class="social">
     <a href="https://www.instagram.com/minhlacoong/" target="_blank"><i class="fab fa-instagram"></i></a>
@@ -30,4 +34,5 @@
     <a href="https://www.facebook.com/congngusi" target="_blank"><i class="fab fa-facebook-square"></i></a>
   </div>
 </body>
+<iframe src="https://www.nhaccuatui.com/mh/background/L457GfJci4RV" width="1" height="1" frameborder="0" allowfullscreen allow="autoplay"></iframe>
 </html>
