--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </div>
 
   <!-- About -->
-  <div id="about">
+  <div id="about" class="show1">
     <div class="container">
       <h1 class="tieuDe">About</h1>
       <div class="about-content">
@@ -67,15 +67,15 @@
   </div>
 
   <!-- Countdown valentine -->
-  <div id="countdown">
-    <h1 class="tieuDe">Valentine</h1>
+  <div id="countdown" class="show1">
+    <h1 class="tieuDe">Valentine left:</h1>
     <p id="dem_nao"></p>
     <a href="apply.html" class="btn">Apply now! ==></a>
   </div>
 
   <!-- Introduce -->
   <!-- intro -->
-  <div id="introduce">
+  <div id="introduce" class="show1">
     <div class="container">
       <div class="introduce-content">
         <div class="content">
@@ -111,20 +111,20 @@
   </div>
 
   <!-- Show_img -->
-  <div id="show">
+  <div id="show_img" >
     <div class="container">
       <div class="grid">
-        <img src="./img/dan.jpg" alt="nope">
-        <img src="./img/sach.jpg" alt="nope">
-        <img src="./img/linh.jpg" alt="nope">
-        <img src="./img/anh.jpg" alt="nope">
+        <img src="./img/dan.jpg" class="show1" alt="nope">
+        <img src="./img/sach.jpg" class="show1" alt="nope">
+        <img src="./img/linh.jpg" class="show1" alt="nope">
+        <img src="./img/anh.jpg" class="show1" alt="nope">
       </div>
       <a href="./apply.html" class="btn">Apply ! !( Trời ơi tớ nghiêm túc đấy, apply đi cậu oiwiiiiii :3 )</a>
     </div>
   </div>
 
   <!-- FAQS -->
-  <div id="faqs">
+  <div id="faqs" class="show1">
     <div class="container">
       <h1 class="tieuDe">FAQS</h1>
       <h4>Is this for real?</h4>
@@ -146,7 +146,7 @@
   </div>
 
   <!-- People saying-->
-  <div id="people_saying">
+  <div id="people_saying" class="show1">
     <div class="container">
       <h1 class="tieuDe">What Are People Saying</h1>
       <br>
