--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
   </div>
 
   <!-- Countdown valentine -->
-  <div id="countdown" class="show1">
-    <h1 class="tieuDe">Valentine left:</h1>
-    <p id="dem_nao"></p>
-    <a href="apply.html" class="btn">Apply now! ==></a>
+  <div id="countdown">
+    <h1 class="tieuDe show1">Valentine</h1>
+    <p id="dem_nao" class="show1"></p>
+    <a href="apply.html" class="btn show1" >Apply now! ==></a>
   </div>
 
   <!-- Introduce -->
