--- a/index.html
+++ b/index.html
@@ -45,13 +45,13 @@
       <div class="about-content">
         <div class="img"></div>
         <div class="content">
-          <p>Mình là Công. Tên đầy đủ là Trần Chiến Công. Cực kỳ đẹp zai, năm nay 20 tuổi.
+          <p>Mình là Công, năm nay 20 tuổi.
             <br>
             <br>
             <!-- Một đêm khi mà codoqua tôi đã quyết định làm website này. -->
             <br>
             <br>
-            Bạn biết đấy sắp valentine rồi mà vẫn single thì buồn lắm.
+            Bạn biết đấy sắp valentine rồi.
             <br>
             <br>
             Nếu bạn thấy thích điều này hãy apply ngay nhé (nó <span><a style="color: #FF6456" href="apply.html">đây</a></span>)
