--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <ul>
         <li><a href="index.html" class="current">Trang chủ</a></li>
         <li><a href="apply.html">Apply</a></li>
-        <li><a href="map.html">Quà</a></li>
+        <li><a href="map.html">Quà Tặng</a></li>
       </ul>
     </div>
   </nav>
