--- a/map.html
+++ b/map.html
@@ -18,7 +18,7 @@
       <ul>
         <li><a href="index.html">Trang chủ</a></li>
         <li><a href="apply.html">Apply</a></li>
-        <li><a href="map.html" class="current">Quà</a></li>
+        <li><a href="map.html" class="current">Quà Tặng</a></li>
       </ul>
     </div>
   </nav>
