--- a/map.html
+++ b/map.html
@@ -9,7 +9,7 @@
   <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="stylesheet" media="screen and (max-width: 768px) href="./css/moblie.css">
+  <link rel="stylesheet" media="screen and (max-width: 768px)" href="./css/moblie.css">
 </head>
 <iframe src="https://www.nhaccuatui.com/mh/background/L457GfJci4RV" width="1" height="1" frameborder="0" allowfullscreen allow="autoplay"></iframe>
 <body>
