--- a/index.html
+++ b/index.html
@@ -51,16 +51,16 @@
             <!-- Một đêm khi mà codoqua tôi đã quyết định làm website này. -->
             <br>
             <br>
-            Bạn biết đấy sắp valentine rồi.
+            Cậu biết đấy sắp valentine rồi.
             <br>
             <br>
-            Nếu bạn thấy thích điều này hãy apply ngay nhé (nó <span><a style="color: #FF6456" href="apply.html">đây</a></span>)
+            Nếu cậu thấy thích thú thì hãy apply ngay nhé (nó <span><a style="color: #FF6456" href="apply.html">đây</a></span>)
             <br>
             <br>
-            Nếu không thì hãy chia sẻ trang web này cho bạn của bạn nhé.
+            Nếu không thì hãy chia sẻ trang web này cho bạn của cậu nhé.
             <br>
             <br>
-            Cảm ơn bạn đã truy cập vào web của tôi! </p>
+            Cảm ơn bạn đã truy cập vào web của mình! </p>
         </div>
       </div>
     </div>
