--- a/apply.html
+++ b/apply.html
@@ -26,7 +26,7 @@
   <div id="contact">
     <div class="container">
   <form name="contact" method="POST" data-netlify="true">
-    <h2>Điền cẩn thận nhé, con mèo đang nhìn đấy! </h2>
+    <h2>Cứ điền đi kệ con mèo! </h2>
     <div class="form-group">
       <label for="name">Tên</label>
       <input type="text" name="name" id="name" required>
