--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             Cậu biết đấy sắp valentine rồi.
             <br>
             <br>
-            Nếu cậu thấy thích thú thì hãy apply ngay nhé (nó <span><a style="color: #FF6456" href="apply.html">đây</a></span>)
+            Nếu cậu thấy thích thì hãy apply ngay nhé (nó <span><a style="color: #FF6456" href="apply.html">đây</a></span>)
             <br>
             <br>
             Nếu không thì hãy chia sẻ trang web này cho bạn của cậu nhé.
