--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <meta name="description" content="This is the website description. Nice eh?">
+  <!-- Google / Search Engine Tags -->
+  <meta itemprop="name" content="Dating website">
+  <meta itemprop="description" content="This is the website description. Nice eh?">
+  <meta itemprop="image" content="./img/a4.jpg">
   <title>Valentine - Dating with me</title>
   <link href="https://fonts.googleapis.com/css?family=Caveat+Brush|Roboto&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
