--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <div class="showcase-content">
         <div class="left">
           <h1 class="logo">Hi I'm TCC</h1>
-          <p>Tớ đang tìm cậu... Người tớ chưa từng biết tên.</p>
+          <p>Đây chỉ là WEB DEMO, còn source code thì tải ở github của tui nha =)).</p>
           <a href="./apply.html" class="btn">Apply</a>
         </div>
         <div class="right">
