--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     <div class="container">
       <div class="showcase-content">
         <div class="left">
-          <h1 class="logo">Hi I'm TCC</h1>
-          <p>Đây chỉ là WEB DEMO, còn source code thì tải ở github của tui nha =)).</p>
+          <h1 class="logo">Lưu ý</h1>
+          <p>Đây chỉ là WEB DEMO.</p>
           <a href="./apply.html" class="btn">Apply</a>
         </div>
         <div class="right">
