--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <div class="container">
       <div class="showcase-content">
         <div class="left">
-          <h1 class="logo">Lưu ý</h1>
+          <h1 class="logo">Hi</h1>
           <p>Đây chỉ là WEB DEMO.</p>
           <a href="./apply.html" class="btn">Apply</a>
         </div>
